--- a/game.html
+++ b/game.html
@@ -2,16 +2,15 @@
 <html>
 <head>
   <title> DOM Rock Paper Scissors </title>
+  <link rel="stylesheet" href="game.css">
 </head>
 
 <body>
-  <div class= "titlegame"> <h1>Rock Paper Scissors</h1></div>
+  <div class= "titlegame"> Rock Paper Scissors</div>
   <div class="playerSelection">
     <button class="selection" data-selection="rock">✊</button>
     <button class="selection" data-selection="paper">✋</button>
     <button class="selection" data-selection="scissors">✌</button>
-    <script src="game.js"></script>
-    <link rel="stylesheet" href="game.css">
   </div>
   
   <div class="results">
@@ -36,4 +35,5 @@
   
   <h2 class="winner"></h2>
 </body>
+<script src="game.js"></script>
 </html>
